# visaionlibrary

./: .gitignore  README.md  pyproject.toml
configs/image_classification/: resnet_34_cls.py
configs/instance_segmentation/: RTMDet-ins_l.py  RTMDet-ins_m.py  RTMDet-ins_s.py  RTMDet-ins_tiny.py  YOLOv5-ins_l.py  YOLOv5-ins_m.py  YOLOv5-ins_n.py  YOLOv5-ins_s.py
configs/object_detection/: YOLOv5-det_s.py  YOLOv5-det_s_bak.py  YOLOv5-det_s_orig.py  YOLOv8-det_l.py  YOLOv8-det_m.py  YOLOv8-det_n.py  YOLOv8-det_s.py  yolov8_s_all_in_one.py  yolov8_s_visaion.py  yolov8_s_visaion_pipeline.py
configs/semantic_segmentation/: HYHUNet-RegNetX-400mf-2X.py  HYHUNet-RegNetX-400mf-4X.py  HYHUNet-RegNetX-400mf-8X.py  HYHUNet-RegNetX-800mf-2X.py  HYHUNet-RegNetX-800mf-4X.py  HYHUNet-RegNetX-800mf-8X.py  README.md
templates/: HYHUNet_RegNetX-400mf-2X_seg.json  HYHUNet_RegNetX-400mf-2X_seg.py  HYHUNet_RegNetX-400mf-4X_seg.json  HYHUNet_RegNetX-400mf-4X_seg.py  HYHUNet_RegNetX-400mf-8X_seg.json  HYHUNet_RegNetX-400mf-8X_seg.py  HYHUNet_RegNetX-800mf-2X_seg.json  HYHUNet_RegNetX-800mf-2X_seg.py  HYHUNet_RegNetX-800mf-4X_seg.json  HYHUNet_RegNetX-800mf-4X_seg.py  HYHUNet_RegNetX-800mf-8X_seg.json  HYHUNet_RegNetX-800mf-8X_seg.py  RTMDet_large_ins.json  RTMDet_large_ins.py  RTMDet_middle_ins.json  RTMDet_middle_ins.py  RTMDet_small_ins.json  RTMDet_small_ins.py  RTMDet_tiny_ins.json  RTMDet_tiny_ins.py  Yolov5_l_ins.json  Yolov5_l_ins.py  Yolov5_m_ins.json  Yolov5_m_ins.py  Yolov5_n_ins.json  Yolov5_n_ins.py  Yolov5_s_ins.json  Yolov5_s_ins.py  resnet_101_cls.json  resnet_101_cls.py  resnet_152_cls.json  resnet_152_cls.py  resnet_34_cls.json  resnet_34_cls.py  resnet_50_cls.json  resnet_50_cls.py  yolov8_l_det.json  yolov8_l_det.py  yolov8_m_det.json  yolov8_m_det.py  (+4 more)
tools/datasets/: coco2visaion_det.py  coco2visaion_ins.py  coco2visaion_seg.py  mask2visaion_ins.py  show_coco_dataset.py  show_coco_dataset_ins.py  visaion2coco.py  xanylabel2visaion_seg.py
tools/export/: encrypt_onnx.py
tools/infer/: infer_onnx_det.py
tools/misc/: expand_sample.py
visaionlibrary/: __init__.py
visaionlibrary/datasets/: __init__.py  cls_dataset.py  det_dataset.py  ins_dataset.py  seg_dataset.py
visaionlibrary/datasets/samplers/: __init__.py  batch_sampler.py  sampler.py
visaionlibrary/engine/: __init__.py
visaionlibrary/evaluation/: __init__.py
visaionlibrary/models/: __init__.py
visaionlibrary/tools/: __init__.py  eval.py  eval_smsg.bat  eval_smsg.sh  export.py  export_smsg.bat  export_smsg.sh  train.py  train_smmg.sh  train_smsg.sh
visaionlibrary/utils/: export_onnx.cp310-win_amd64.pyd  export_onnx.pyi
(+25 files in other folders)
