[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "visaionlibrary"
dynamic = ["version"]
description = "A comprehensive deep learning library for computer vision tasks, built on OpenMMLab ecosystem."
readme = "README.md"
requires-python = ">=3.10"
license = { "text" = "AGPL-3.0" }
keywords = ["machine-learning", "deep-learning", "computer-vision", "OpenMMLab", "ML", "DL", "AI", "object-detection", "image-segmentation", "instance-segmentation"]
authors = [
    { name = "Felix Fu", email = "alanmathisonturing@163.com" }
]
maintainers = [
    { name = "Felix Fu", email = "alanmathisonturing@163.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "numpy==1.23.0",
    "opencv-python==4.11.0.86",
    "opencv-python-headless==4.11.0.86",
    "albumentations==1.3.0",
    "torch==1.13.0",
    "torchvision==0.14.0",
    "mmengine==0.10.6",
    "mmcv==2.0.1",
    "mmpretrain==1.2.0",
    "mmdet==3.0.0",
    "mmyolo==0.6.0",
    "mmsegmentation==1.2.2",
    "onnx==1.15.0",
    "onnxruntime==1.16.2",
    "onnxsim==0.4.36",
    "ftfy==6.3.1",
    "regex==2024.11.6",
    "timm==0.6.12",
    "psutil==7.0.0",
    "networkx==2.8.8",
    "scikit-image==0.24.0",
    "pycryptodome==3.21.0",
]


[tool.setuptools]
packages = { find = { where = ["."], include = ["visaionlibrary", "visaionlibrary.*"] } }
package-data = { "visaionlibrary" = ["**/*.yaml", "../tests/*.py", "**/*.sh", "**/*.bat", "**/*.so", "**/*.dll", "**/*.pyd"], "visaionlibrary.assets" = ["*.jpg"] }


[tool.setuptools.dynamic]
version = { attr = "visaionlibrary.__version__" }
